--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,12 @@
 <h1>Hello</h1>
-<app-about></app-about>
-<app-home></app-home>
+<!-- <app-about></app-about>
+<app-home></app-home> -->
+
+
+<nav>
+  <ul>
+    <li><a routerLink="/home" routerLinkActive="active">Home</a></li>
+    <li><a routerLink="/about" routerLinkActive="active">About</a></li>
+  </ul>
+</nav>
+<router-outlet></router-outlet>
