--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,6 +7,7 @@
   <ul>
     <li><a routerLink="/home" routerLinkActive="active">Home</a></li>
     <li><a routerLink="/about" routerLinkActive="active">About</a></li>
+    <li><a routerLink="/form" routerLinkActive="active">Form</a></li>
   </ul>
 </nav>
 <router-outlet></router-outlet>
