--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,6 +8,7 @@
     <li><a routerLink="/home" routerLinkActive="active">Home</a></li>
     <li><a routerLink="/about" routerLinkActive="active">About</a></li>
     <li><a routerLink="/form" routerLinkActive="active">Form</a></li>
+    <li><a routerLink="/new-form" routerLinkActive="active">New Form</a></li>
   </ul>
 </nav>
 <router-outlet></router-outlet>
