--- a/src/app/form/form.component.html
+++ b/src/app/form/form.component.html
@@ -5,9 +5,9 @@
   [ngModelOptions]="{standalone: true}"
   >
   <br>
-  <!-- <button type="submit" (click)="submitForm()">
+  <button type="submit" (click)="submitForm()">
     Save
-  </button> -->
+  </button>
 
   <button>
     Save
