--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,9 +8,15 @@
     <li><a routerLink="/home" routerLinkActive="active">Home</a></li>
     <li><a routerLink="/about" routerLinkActive="active">About</a></li>
     <li><a routerLink="/form" routerLinkActive="active">Form</a></li>
+    <li><a routerLink="/profile-editor" routerLinkActive="active">Profile</a></li>
   </ul>
 </nav>
 
 
 
 <router-outlet></router-outlet>
+
+<!-- <app-form-control></app-form-control>
+
+<app-profile-editor></app-profile-editor> -->
+
