--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,6 +9,7 @@
     <li><a routerLink="/about" routerLinkActive="active">About</a></li>
     <li><a routerLink="/form" routerLinkActive="active">Form</a></li>
     <li><a routerLink="/profile-editor" routerLinkActive="active">Profile</a></li>
+    <li><a routerLink="/get-data" routerLinkActive="active">Data</a></li>
   </ul>
 </nav>
 
