--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,6 +10,7 @@
     <li><a routerLink="/form" routerLinkActive="active">Form</a></li>
     <li><a routerLink="/profile-editor" routerLinkActive="active">Profile</a></li>
     <li><a routerLink="/get-data" routerLinkActive="active">Data</a></li>
+    <li><a routerLink="/cha" routerLinkActive="active">Cha</a></li>
   </ul>
 </nav>
 
@@ -17,7 +18,4 @@
 
 <router-outlet></router-outlet>
 
-<!-- <app-form-control></app-form-control>
-
-<app-profile-editor></app-profile-editor> -->
 
