--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,6 +11,7 @@
     <li><a routerLink="/profile-editor" routerLinkActive="active">Profile</a></li>
     <li><a routerLink="/get-data" routerLinkActive="active">Data</a></li>
     <li><a routerLink="/cha" routerLinkActive="active">Cha</a></li>
+    <li><a routerLink="/RSJX" routerLinkActive="active">RSJX</a></li>
   </ul>
 </nav>
 
